// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ContractMethodCall: reducer method call on failure 1`] = `
Object {
  "modals": Object {
    "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17": Object {
      "loading": false,
      "result": "ERROR",
    },
  },
}
`;

exports[`ContractMethodCall: reducer method call on request 1`] = `
Object {
  "modals": Object {
    "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17": Object {
      "loading": true,
      "result": undefined,
    },
  },
}
`;

exports[`ContractMethodCall: reducer method call on success 1`] = `
Object {
  "modals": Object {
    "methodCallgreet8070db2390462e2b5748085bde1350590e08bb17": Object {
      "loading": false,
      "result": Object {},
    },
  },
}
`;

exports[`ContractMethodCall: reducer set initial state 1`] = `
Object {
  "modals": Object {},
}
`;
